unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__F4_User_Facility_Contact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__F4_User_Facility_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F4. User Facility Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.CMPL123CME__F3_User_Facility__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MDR (F4. User Facility Contact)</relationshipLabel>
        <relationshipName>MDR3</relationshipName>
        <type>Lookup</type>
    </CustomField>