unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Facility_or_Distributor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Facility_or_Distributor__c</fullName>
        <label>Facility or Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Facility</fullName>
                </value>
                <value>
                    <fullName>Importer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>