unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__G1_All_Manufacturers_Contact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__G1_All_Manufacturers_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G1 All Manufacturers Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (G1 All Manufacturers Contact)</relationshipLabel>
        <relationshipName>MDR6</relationshipName>
        <type>Lookup</type>
    </CustomField>