unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Health_professional__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Health_professional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Health professional</description>
        <label>Health professional</label>
        <type>Checkbox</type>
    </CustomField>