unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__If_follow_up_What_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_follow_up_What_Type__c</fullName>
        <label>If follow up, What Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Additional Information</fullName>
                </value>
                <value>
                    <fullName>Response to FDA Request</fullName>
                </value>
                <value>
                    <fullName>Device Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>