unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__If_ind_protocol_no__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_ind_protocol_no__c</fullName>
        <description>If ind, protocol no</description>
        <label>If ind, protocol no</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>