unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__If_Remedical_Action_Init__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__If_Remedical_Action_Init__c</fullName>
        <label>If Remedical Action Init</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Relabeling</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Patient Monitoring</fullName>
                </value>
                <value>
                    <fullName>Modification/Adjustment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>