unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Initial_MDR__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Initial_MDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial MDR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__MDR__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Initial</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__MDR__c</referenceTo>
        <relationshipLabel>Supplemental MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </CustomField>