unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Initial_Report_Date_and_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Initial_Report_Date_and_Time__c</fullName>
        <description>Initial Report Date and Time</description>
        <label>Initial Report Date and Time</label>
        <type>DateTime</type>
    </CustomField>