unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Initial_Reporter__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Initial_Reporter__c</fullName>
        <label>Initial Reporter</label>
        <type>TextArea</type>
    </CustomField>