unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Initial_Reporter_Phone__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Initial_Reporter_Phone__c</fullName>
        <label>Initial Reporter Phone</label>
        <type>Phone</type>
    </CustomField>