unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Labeled_for_single_use__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Labeled_for_single_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labeled for single use</label>
        <type>Checkbox</type>
    </CustomField>