unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Loc_where_event_occurred__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Loc_where_event_occurred__c</fullName>
        <label>Location Where Event Occurred</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Outpatient Treatment Facility</fullName>
                </value>
                <value>
                    <fullName>Outpatient Diagnostic Facility</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Surgical Facility</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>