unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Lot_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Lot_No__c</fullName>
        <description>Lot No</description>
        <label>Lot No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>