unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Manufacturer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (Manufacturer)</relationshipLabel>
        <relationshipName>MDR1</relationshipName>
        <type>Lookup</type>
    </CustomField>