unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Manufacturer_Email_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Manufacturer_Email_Address__c</fullName>
        <description>Manufacturer Email Address</description>
        <inlineHelpText>Manufacturer Email Address</inlineHelpText>
        <label>Manufacturer Email Address</label>
        <type>Email</type>
    </CustomField>