unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__MDR_MFR__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MDR_MFR__c</fullName>
        <description>MDR MFR #</description>
        <inlineHelpText>MDR MFR #</inlineHelpText>
        <label>MDR MFR #</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>