unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__MDR_Reprocessor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MDR_Reprocessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDR Reprocessor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (MDR Reprocessor)</relationshipLabel>
        <relationshipName>MDR2</relationshipName>
        <type>Lookup</type>
    </CustomField>