unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__MDR_Submission__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MDR_Submission__c</fullName>
        <label>MDR Submission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to submit</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>