unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__MDR_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MDR_Type__c</fullName>
        <label>MDR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>