unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Medication_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Medication_1__c</fullName>
        <description>Medication 1</description>
        <label>Medication 1</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>