unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Medication_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Medication_2__c</fullName>
        <description>Medication 2</description>
        <label>Medication 2</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>