unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__MFG__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MFG__c</fullName>
        <label>Mfg</label>
        <type>TextArea</type>
    </CustomField>