unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Mfg_Follow_up_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Mfg_Follow_up_No__c</fullName>
        <label>Mfg Follow up No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>