unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Mfg_Phone_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Mfg_Phone_Number__c</fullName>
        <inlineHelpText>Manufacturer Phone Number</inlineHelpText>
        <label>Mfg Phone Number</label>
        <type>Phone</type>
    </CustomField>