unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Mfg_Report_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Mfg_Report_No__c</fullName>
        <description>Mfg Report No</description>
        <label>Mfg Report No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>