unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Mfr_Report_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Mfr_Report_Number__c</fullName>
        <description>Mfr Report#</description>
        <inlineHelpText>Mfr Report#</inlineHelpText>
        <label>Mfr Report#</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>