unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__MFR_Report_Ref__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__MFR_Report_Ref__c</fullName>
        <formula>IF(OR(ISNULL(CMPL123CME__Mfr_Report_Number__c),ISBLANK(CMPL123CME__Mfr_Report_Number__c)),'',CMPL123CME__Mfr_Report_Number__c &amp; "-" &amp; IF( OR(RecordType.Name = 'Initial',CMPL123CME__Follow_up_No__c == 'NA'), '00', IF(LEN(CMPL123CME__Follow_up_No__c) &lt; 2,'0'&amp;CMPL123CME__Follow_up_No__c,CMPL123CME__Follow_up_No__c) ))</formula>
        <label>MFR Report Ref #</label>
        <type>Text</type>
    </CustomField>