unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Model_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Model_No__c</fullName>
        <label>Model No</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>