unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Narrative_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Narrative_Type__c</fullName>
        <inlineHelpText>Tell what naarative type you are providing, you can select both if you are providing both narratives</inlineHelpText>
        <label>Narrative Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Manufacturer Narrative</fullName>
                </value>
                <value>
                    <fullName>Corrected Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>