unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Occupation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Occupation__c</fullName>
        <label>Unused Occupation</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>