unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Occupation_Of_Initial_Reporter__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Occupation_Of_Initial_Reporter__c</fullName>
        <description>Occupation</description>
        <inlineHelpText>Occupation of Initial Reporter</inlineHelpText>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator/Supervisor</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineer</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Other Healthcare Professional</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Risk Manager</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>