unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Operator_of_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Operator_of_Device__c</fullName>
        <label>Operator of Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Lay User/Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>