unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__OTC_Product__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__OTC_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OTC Product</label>
        <type>Checkbox</type>
    </CustomField>