unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Other_event_please_specify__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_event_please_specify__c</fullName>
        <description>Other event - please specify</description>
        <label>Other event - please specify</label>
        <type>TextArea</type>
    </CustomField>