unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Other_loc_where_occurred__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_loc_where_occurred__c</fullName>
        <description>Other loc where occurred</description>
        <label>Other loc where occurred</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>