unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Other_operator_of_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_operator_of_Device__c</fullName>
        <description>Other operator of Device</description>
        <label>Other operator of Device</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>