unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Other_RelevantHistory__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_RelevantHistory__c</fullName>
        <description>Other Relavat History, Including Preexisting Medical Conditions (e.g., allergies, race,pregnacy,
smoking and alcohol use, hepatic/renal dysfunction, etc. )</description>
        <inlineHelpText>Other Relavat History, Including Preexisting Medical Conditions (e.g., allergies, race,pregnacy,
smoking and alcohol use, hepatic/renal dysfunction, etc. ) Continuation Field Available in last section</inlineHelpText>
        <label>Other Relevant History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>