unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Other_Remarks__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Remarks__c</fullName>
        <description>Other Remarks</description>
        <inlineHelpText>Other Remarks</inlineHelpText>
        <label>Other Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>