unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Other_Remedial_Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_Remedial_Action__c</fullName>
        <description>Other Remedial Action</description>
        <label>Other Remedial Action</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>