unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Other_source_Please_specify__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Other_source_Please_specify__c</fullName>
        <description>Other source-Please specify</description>
        <label>Other source-Please specify</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>