unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Outcomes_attributed_to_AE__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Outcomes_attributed_to_AE__c</fullName>
        <description>Outcomes attributed to AE</description>
        <label>Outcomes attributed to AE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Life-threatening</fullName>
                </value>
                <value>
                    <fullName>Disability or Permanent Damage</fullName>
                </value>
                <value>
                    <fullName>Congential Anomaly/Birth Defect</fullName>
                </value>
                <value>
                    <fullName>Hospitalization-initial or prolonged</fullName>
                </value>
                <value>
                    <fullName>Other Serious(Important Medical Events)</fullName>
                </value>
                <value>
                    <fullName>Required Intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>