unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Patient_Age_with_units__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Age_with_units__c</fullName>
        <formula>Text(CMPL123CME__Age_at_Time_of_Event__c) &amp; " " &amp; Text(CMPL123CME__Age_Units_Patient__c)</formula>
        <label>Patient Age (with units)</label>
        <type>Text</type>
    </CustomField>