unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Patient_ID__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_ID__c</fullName>
        <description>Patient ID</description>
        <label>Patient ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>