unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Patient_Identifier__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Identifier__c</fullName>
        <description>Patient Identifier</description>
        <inlineHelpText>Patient Identifier</inlineHelpText>
        <label>Patient Identifier</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>