unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Patient_Weight_with_units__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Patient_Weight_with_units__c</fullName>
        <formula>Text(CMPL123CME__Weight__c) &amp; " " &amp; Text(CMPL123CME__Weight_Units_Patient__c)</formula>
        <label>Patient Weight (with units)</label>
        <type>Text</type>
    </CustomField>