unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__PMA_510_k__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__PMA_510_k__c</fullName>
        <description>PMA/510(k)</description>
        <label>PMA/510(k)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>