unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Pre_1938__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Pre_1938__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre 1938</label>
        <type>Checkbox</type>
    </CustomField>