unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Procode__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Procode__c</fullName>
        <description>Procode</description>
        <inlineHelpText>Procode</inlineHelpText>
        <label>Procode</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>