unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Registered_Site__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Registered_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered Site</label>
        <referenceTo>CMPL123CME__Registered_Site__c</referenceTo>
        <relationshipLabel>MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </CustomField>