unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Registered_Site_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Registered_Site_No__c</fullName>
        <label>Registered Site</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>