unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Relevant_tests_and_lab_data__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Relevant_tests_and_lab_data__c</fullName>
        <label>Unused Field Relevant tests</label>
        <type>TextArea</type>
    </CustomField>