unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Relevant_Tests_Lab_Data__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Relevant_Tests_Lab_Data__c</fullName>
        <description>Replacement for the Unused field. Relevant Tests and Lab Data</description>
        <inlineHelpText>Relevant Tests and Lab Data</inlineHelpText>
        <label>Relevant Tests and Lab Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>