unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Report_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Report_Date__c</fullName>
        <inlineHelpText>Date of this Report (Device only)</inlineHelpText>
        <label>Report Date</label>
        <type>Date</type>
    </CustomField>