unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Report_sent_to_FDA__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Report_sent_to_FDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report sent to FDA</label>
        <type>Checkbox</type>
    </CustomField>