unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Report_sent_to_MFG__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Report_sent_to_MFG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Report sent to MFG</description>
        <label>Report sent to Mfg</label>
        <type>Checkbox</type>
    </CustomField>