unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Report_source__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Report_source__c</fullName>
        <label>Report source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Study</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>User Facility</fullName>
                </value>
                <value>
                    <fullName>Company Representative</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>